boreal/tests/assets/invalid_files/parsing/base64_alphabets_incompatible2.yar
// [error: alphabets used for base64 and base64wide must be identical]
rule a {
    strings:
        $a = "a" base64 base64wide("/=abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789")
    condition:
        $a
}
